fixed some spacing errors

--- a/css/style.css
+++ b/css/style.css
@@ -160,8 +160,7 @@ h6{
 
 /* number input styling */
 
-.durationControl {
-  display: inline;
+.durationControl { 
   color: #000;
   width: 100px;
   appearance: none;
@@ -172,7 +171,6 @@ h6{
 /* styling for select box*/
 
 .selectFocus {
-  display: inline;
   color: #000;
   width: 150px;
   appearance: none;
